--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -20,3 +20,10 @@ td:nth-child(2), th:nth-child(2) {
   border-left: 2px solid black;
   border-right: 2px solid black;
 }
+
+.no-border-table {
+    border-collapse: collapse;
+    width: 100%;
+    border: none;
+    text-align: center;
+}
