--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,3 +9,7 @@
     border: none;
     text-align: center;
 }
+.no-border-table th, .no-border-table td {
+    padding: 10px; /* 设置单元格内的填充 */
+    border: none;  /* 移除单元格的边框 */
+}
