--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -25,6 +25,10 @@ table {
   }
 }
 
+.div-table {
+    text-align: center;
+  }
+
 // .no-border-table {
 //     border-collapse: collapse;
 //     width: 100%;
