--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -6,7 +6,7 @@
 /* 自定义表格样式，覆盖主题中的表格样式 */
 table {
   // border-collapse: collapse; /* 让表格无滚动且合并边框 */
-  // table-layout: fixed;          /* 固定表格布局 */
+  table-layout: fixed;          /* 固定表格布局 */
   width: 100%;               /* 确保表格充满页面宽度 */
   text-align: center;         /* 让表格内容居中 */
   word-break: normal;         /* 自定义的单词换行方式 */
