--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -28,7 +28,11 @@ table {
 .div-table {
     text-align: center;
     width: 100%;  
+    font-size: 12px;
   }
+.edit_table{
+    font-size: 12px;
+}
 
 // .no-border-table {
 //     border-collapse: collapse;
