--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -25,10 +25,10 @@ table {
   }
 }
 
-.div-table {
-    text-align: center;
-    width: 100%;  
-  }
+// .div-table {
+//     text-align: center;
+//     width: 100%;  
+//   }
 .div-table td {
     font-size: 14px;
   }
