--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -29,11 +29,16 @@ table {
 //     text-align: center;
 //     width: 100%;  
 //   }
+
 .div-table td {
     font-size: 14px;
   }
+
 .edit_table td {
     font-size: 14px;
+}
+.edit_table audio {
+    margin-top: 30px; /* 设置每个 audio 元素距离表格顶的距离 */
 }
 
 // .no-border-table {
